Basic quantum programming

--- a/basic_quantum_programing.ipynb
+++ b/basic_quantum_programing.ipynb
@@ -213,7 +213,7 @@
    ],
    "source": [
     "#Probamos el codigo en las maquinas cuanticas reales pero antes registramos nuestro token para acceder\n",
-    "IBMQ.save_account('37170a6230f43c2d6c0a27beefd641aa1ab55848540723833ec1dd0b0b751e9a4158c8d10880c190306fe018f4de38b5a06e9853e8ac3f7ebf8cde300ad9cf60', overwrite=True)\n",
+    "IBMQ.save_account('', overwrite=True)\n",
     "provider = IBMQ.load_account()"
    ]
   },
